Webpack einführen Fetch mit got aktualisiert noch nicht die HelloWorld-React-Komponente

--- a/aspnetcore/reactApp/index.html
+++ b/aspnetcore/reactApp/index.html
@@ -17,5 +17,5 @@
             }
         }
     </script-->
-    <script type="text/javascript" src="/dist/polyfills.bundle.js"></script><script type="text/javascript" src="/dist/reactApp.bundle.js"></script></body>
+    </body>
 </html>
